--- a/SentenceKit/Base.lproj/Main.storyboard
+++ b/SentenceKit/Base.lproj/Main.storyboard
@@ -35,7 +35,7 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
-                        <outlet property="sentence" destination="4qB-wq-OYQ" id="qap-tb-clP"/>
+                        <outlet property="sentenceView" destination="4qB-wq-OYQ" id="yVX-hU-5pw"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
